Fix wrong text-decoration-color on Safari

--- a/assets/css/releases/4.3.scss
+++ b/assets/css/releases/4.3.scss
@@ -849,6 +849,7 @@ $donate-robot-size: 500px;
 							.c-link-a,
 							.c-link-popover-button {
 								color: white;
+								text-decoration-color: white;
 							}
 						}
 					}
